fixed overflow error on index and added go back button on about section

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,24 @@
   100% {background-color: #fff;}
 }
 
+/* Scrollbar Styling */
+::-webkit-scrollbar {
+  width: 5px;
+  margin-right: 10px;
+}
+
+::-webkit-scrollbar-track { /* Scrollbar track */
+  background-color: transparent;
+  -webkit-border-radius: 10px; /* For other browsers */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb { /* Scrollbar handle */
+  background-color: #FAB81E;
+  -webkit-border-radius: 10px; /* For other browsers */
+  border-radius: 10px;
+}
+
 /* Navbar */
 .wrapper {
     display: flex;
@@ -22,6 +40,7 @@
 
 .list-unstyled {
   text-align: center;
+  margin-top: 20px;
 }
 
 .list-unstyled > li {
@@ -64,11 +83,19 @@ a:active {
 body {
   background-color: #000;
   margin: 0px;
-  overflow: hidden;
+  overflow: auto;
+}
+
+@media screen and (max-width: 560px) {
+  .index-glitch-img {
+    width: 350px;
+    margin-top: 50px;
+  }
+
 }
 
 /* Home page styling */
-.stream-center {
+.index-center {
   margin: 0;
   position: absolute;
   top: 40%;
@@ -79,25 +106,6 @@ body {
   height: auto;
 }
 
-#glitch-center {
-}
-
-.center-title {
-  /* TODO: add centered glitch text above player that looks like cmd prompt */
-  text-align: center;
-  width: 100%;
-  position: absolute;
-}
-
-.stream-title {
-  color: #fff;
-  font-size: 3em;
-  font-family: 'Roboto', sans-serif;
-  margin-top: 50px;
-  letter-spacing: 5px;
-  /* text-shadow: 2px 0px #870000; */
-}
-
 .timer {
   text-align: center;
   letter-spacing: 3px;
@@ -105,7 +113,6 @@ body {
   font-size: 48px;
   font-family: 'Roboto', sans-serif;
   margin-top: 50px;
-  border-bottom: 2px dashed #fff;
   padding-bottom: 25px;
 }
 
@@ -134,7 +141,6 @@ body {
   width: 175px;
   height: 175px;
   border-radius: 50%;
-  border: 2px solid #FAB81E;
 }
 
 .subText {
@@ -160,10 +166,7 @@ body {
 }
 
 .row {
-  margin-top: 60px;
-  margin-left: 50px;
   position: relative;
-  width: 95%;
 }
 
 .socialLink {
@@ -178,4 +181,8 @@ body {
   color: #FAB81E;
   -webkit-transition: color 0.25s; /* Safari */
   transition: color 0.25s;
+}
+
+.brand-about-text {
+  letter-spacing: 2px;
 }
